Create works. TO: Check delete.

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+     <title></title>
+
+    <!-- For testing -->
+    <script src="/library/jquery/jquery-min.js"></script>
+    <script src="/library/underscore/underscore-min.js"></script>
 </head>
 <body>
    HELLO 
